[package]
name = "hpx-rs"
version = "0.1.0"
authors = ["Shreyas Atre <shreyasatre16@gmail.com>", "Dikshant <dikshant.073@gmail.com"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/STEllAR-GROUP/hpx-rs"
description = """
Bindings to hpx for interoperating with stellar-group hpx library for 
concurrency and parallelism.
"""
categories = ["api-bindings"]
license = "BSL-1.0"
publish = false

[dependencies]
hpx-sys = { path = "hpx-sys", version = "0.1.0" }

[workspace]
members = []
